kubernetes/apps/external-secrets/onepassword-connect/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword-connect
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: onepassword-connect
      app.kubernetes.io/name: onepassword-connect
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
